# poker-manager

./: .env.example  Cargo.toml  Dockerfile  README.md  TECH.md  docker-compose.yml
memory/: MEMORY.md  project_state.md
migrations/: 001_initial.sql  002_game_management.sql  003_speed_steps.sql  004_players_left.sql
src/: db.rs  lib.rs  main.rs  schedule.rs
src/controller/: admin.rs  mod.rs  player.rs  sse.rs
src/models/: game.rs
src/views/: mod.rs
static/: style.css
templates/: base.html
templates/components/: blind_row.html  suggested_levels.html  timer.html
templates/pages/: index.html  rules.html
templates/pages/admin/: base.html  game.html  games.html  login.html  setup.html
tests/: e2e_test.rs  integration_test.rs
