[package]
name = "poker-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-lab = "0.22"
actix-files = "0.6"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
tera = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
dotenvy = "0.15"
